--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <!-- Custom Css Link -->
-     <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <h1>Hello New Repo</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos in,
+      ipsum ea asperiores error alias eligendi maiores eaque suscipit id? Minus
+      perferendis ratione nihil repudiandae sit sint, officia qui sed?
+    </p>
+  </body>
 </html>
