added Dashboard layout

--- a/index.html
+++ b/index.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- PhosPhor Icon Cdn link -->
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
     <!-- Custom Css Link -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Hello New Repo</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos in,
-      ipsum ea asperiores error alias eligendi maiores eaque suscipit id? Minus
-      perferendis ratione nihil repudiandae sit sint, officia qui sed?
-    </p>
+    <aside></aside>
+    <main>
+      <nav>
+        <form action="#">
+          <label for="search">
+            <i class="ph ph-magnifying-glass"></i>
+          </label>
+          <input type="search" id="search" />
+        </form>
+
+        <div class="info">
+          <div class="icons">
+            <a href="#">
+              <i class="ph ph-chat-circle-dots"></i>
+            </a>
+            <a href="#">
+              <i class="ph ph-siren"></i>
+            </a>
+          </div>
+          <div class="profile">
+            <span>Aryan Saini</span>
+            <div class="profile_pic">
+              <img src="./images/user.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </nav>
+    </main>
   </body>
 </html>
