--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <aside></aside>
+    <aside>
+      <div class="logo">
+        <a href="/Dashboard">
+          <i class="ph-duotone ph-lightning"></i>
+          <span>Dashboard TNT</span>
+        </a>
+      </div>
+      <!-- LOGO End -->
+      <div class="menu">
+        <h4 class="list_title">Menu</h4>
+
+        <ul class="sideList">
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-squares-four"></i> <span>ManageMent</span></a></li>
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-users-four"></i> <span>Users Groups</span></a></li>
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-shopping-cart"></i> <span>Products</span></a></li>
+        </ul>
+      </div>
+      <div class="menu">
+        <h4 class="list_title">Other</h4>
+
+        <ul class="sideList">
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
+          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
+        </ul>
+      </div>
+    </aside>
     <main>
       <nav>
         <form action="#">
