add cards with dropdown.

--- a/index.html
+++ b/index.html
@@ -24,19 +24,54 @@
         <h4 class="list_title">Menu</h4>
 
         <ul class="sideList">
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-squares-four"></i> <span>ManageMent</span></a></li>
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-users-four"></i> <span>Users Groups</span></a></li>
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-shopping-cart"></i> <span>Products</span></a></li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-house-line"></i>
+              <span>Dashboard</span></a
+            >
+          </li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-squares-four"></i>
+              <span>ManageMent</span></a
+            >
+          </li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-users-four"></i>
+              <span>Users Groups</span></a
+            >
+          </li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-shopping-cart"></i>
+              <span>Products</span></a
+            >
+          </li>
         </ul>
       </div>
       <div class="menu">
         <h4 class="list_title">Other</h4>
 
         <ul class="sideList">
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
-          <li class="sideItem"><a href="#" class="sideLink"><i class="ph-duotone ph-house-line"></i> <span>Dashboard</span></a></li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-house-line"></i>
+              <span>Dashboard</span></a
+            >
+          </li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-house-line"></i>
+              <span>Dashboard</span></a
+            >
+          </li>
+          <li class="sideItem">
+            <a href="#" class="sideLink"
+              ><i class="ph-duotone ph-house-line"></i>
+              <span>Dashboard</span></a
+            >
+          </li>
         </ul>
       </div>
     </aside>
@@ -61,11 +96,76 @@
           <div class="profile">
             <span>Aryan Saini</span>
             <div class="profile_pic">
-              <img src="./images/user.jpg" alt="">
+              <img src="./images/user.jpg" alt="" />
             </div>
           </div>
         </div>
       </nav>
+
+      <div class="main_content">
+        <div class="countCards">
+          <div class="card">
+            <div class="dateMenu">
+              <div class="date">2024/6</div>
+              <div class="dropdown">
+                <i class="ph-duotone ph-dots-three-outline"></i>
+
+                <ul class="dropmenu">
+                  <li>Edit</li>
+                  <li>Delete</li>
+                </ul>
+              </div>
+            </div>
+            <h4 class="count">3</h4>
+            <h6 class="title">Admins</h6>
+          </div>
+          <div class="card">
+            <div class="dateMenu">
+              <div class="date">2024/6</div>
+              <div class="dropdown">
+                <i class="ph-duotone ph-dots-three-outline"></i>
+
+                <ul class="dropmenu">
+                  <li>Edit</li>
+                  <li>Delete</li>
+                </ul>
+              </div>
+            </div>
+            <h4 class="count">4</h4>
+            <h6 class="title">Teacher</h6>
+          </div>
+          <div class="card">
+            <div class="dateMenu">
+              <div class="date">2024/6</div>
+              <div class="dropdown">
+                <i class="ph-duotone ph-dots-three-outline"></i>
+
+                <ul class="dropmenu">
+                  <li>Edit</li>
+                  <li>Delete</li>
+                </ul>
+              </div>
+            </div>
+            <h4 class="count">2</h4>
+            <h6 class="title">Students</h6>
+          </div>
+          <div class="card">
+            <div class="dateMenu">
+              <div class="date">2024/6</div>
+              <div class="dropdown">
+                <i class="ph-duotone ph-dots-three-outline"></i>
+
+                <ul class="dropmenu">
+                  <li>Edit</li>
+                  <li>Delete</li>
+                </ul>
+              </div>
+            </div>
+            <h4 class="count">6</h4>
+            <h6 class="title">Parents</h6>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
