added apex chart

--- a/index.html
+++ b/index.html
@@ -167,5 +167,10 @@
         </div>
       </div>
     </main>
+    <!-- Apex chart CDN Links -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
+    <!-- Custom JS Link -->
+    <script src="./js/script.js"></script>
   </body>
 </html>
