apex chart completed

--- a/index.html
+++ b/index.html
@@ -75,175 +75,180 @@
         </ul>
       </div>
     </aside>
-    <main>
-      <nav>
-        <form action="#">
-          <label for="search">
-            <i class="ph ph-magnifying-glass"></i>
-          </label>
-          <input type="search" id="search" />
-        </form>
+    <nav>
+      <form action="#">
+        <label for="search">
+          <i class="ph ph-magnifying-glass"></i>
+        </label>
+        <input type="search" id="search" />
+      </form>
 
-        <div class="info">
-          <div class="icons">
-            <a href="#">
-              <i class="ph ph-chat-circle-dots"></i>
-            </a>
-            <a href="#">
-              <i class="ph ph-siren"></i>
-            </a>
-          </div>
-          <div class="profile">
-            <span>Aryan Saini</span>
-            <div class="profile_pic">
-              <img src="./images/user.jpg" alt="" />
-            </div>
-          </div>
+      <div class="info">
+        <div class="icons">
+          <a href="#">
+            <i class="ph ph-chat-circle-dots"></i>
+          </a>
+          <a href="#">
+            <i class="ph ph-siren"></i>
+          </a>
         </div>
-      </nav>
-
-      <div class="main_content">
-        <div class="countCards">
-          <div class="card">
-            <div class="dateMenu">
-              <div class="date">2024/6</div>
-              <div class="dropdown">
-                <i class="ph-duotone ph-dots-three-outline"></i>
-
-                <ul class="dropmenu">
-                  <li>Edit</li>
-                  <li>Delete</li>
-                </ul>
-              </div>
-            </div>
-            <h4 class="count">3</h4>
-            <h6 class="title">Admins</h6>
-          </div>
-          <div class="card">
-            <div class="dateMenu">
-              <div class="date">2024/6</div>
-              <div class="dropdown">
-                <i class="ph-duotone ph-dots-three-outline"></i>
-
-                <ul class="dropmenu">
-                  <li>Edit</li>
-                  <li>Delete</li>
-                </ul>
-              </div>
-            </div>
-            <h4 class="count">4</h4>
-            <h6 class="title">Teacher</h6>
-          </div>
-          <div class="card">
-            <div class="dateMenu">
-              <div class="date">2024/6</div>
-              <div class="dropdown">
-                <i class="ph-duotone ph-dots-three-outline"></i>
-
-                <ul class="dropmenu">
-                  <li>Edit</li>
-                  <li>Delete</li>
-                </ul>
-              </div>
-            </div>
-            <h4 class="count">2</h4>
-            <h6 class="title">Students</h6>
-          </div>
-          <div class="card">
-            <div class="dateMenu">
-              <div class="date">2024/6</div>
-              <div class="dropdown">
-                <i class="ph-duotone ph-dots-three-outline"></i>
-
-                <ul class="dropmenu">
-                  <li>Edit</li>
-                  <li>Delete</li>
-                </ul>
-              </div>
-            </div>
-            <h4 class="count">6</h4>
-            <h6 class="title">Parents</h6>
+        <div class="profile">
+          <span>Aryan Saini</span>
+          <div class="profile_pic">
+            <img src="./images/user.jpg" alt="" />
           </div>
         </div>
       </div>
+    </nav>
 
-      <div class="table_card">
-        <table>
-          <tr>
-            <th>invoce</th>
-            <th>customer</th>
-            <th>ship</th>
-            <th>price</th>
-            <th>pruchased price</th>
-            <th>status</th>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="progress">Progress</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="open">Open</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="on-hold"> on hold</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="progress">Progress</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td> <button class="on-hold"> on hold</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="open">Open</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="open">Open</button></td>
-          </tr>
-          <tr>
-            <td>1001</td>
-            <td>Mark Otto</td>
-            <td>Japan</td>
-            <td>$3000</td>
-            <td>$1200</td>
-            <td><button class="progress">Progress</button></td>
-          </tr>
-        </table>
-       </div>
-    </main>
+    <div class="countCards my-md">
+      <div class="card">
+        <div class="dateMenu">
+          <div class="date">2024/6</div>
+          <div class="dropdown">
+            <i class="ph-duotone ph-dots-three-outline"></i>
+
+            <ul class="dropmenu">
+              <li>Edit</li>
+              <li>Delete</li>
+            </ul>
+          </div>
+        </div>
+        <h4 class="count">3</h4>
+        <h6 class="title">Admins</h6>
+      </div>
+      <div class="card">
+        <div class="dateMenu">
+          <div class="date">2024/6</div>
+          <div class="dropdown">
+            <i class="ph-duotone ph-dots-three-outline"></i>
+
+            <ul class="dropmenu">
+              <li>Edit</li>
+              <li>Delete</li>
+            </ul>
+          </div>
+        </div>
+        <h4 class="count">4</h4>
+        <h6 class="title">Teacher</h6>
+      </div>
+      <div class="card">
+        <div class="dateMenu">
+          <div class="date">2024/6</div>
+          <div class="dropdown">
+            <i class="ph-duotone ph-dots-three-outline"></i>
+
+            <ul class="dropmenu">
+              <li>Edit</li>
+              <li>Delete</li>
+            </ul>
+          </div>
+        </div>
+        <h4 class="count">2</h4>
+        <h6 class="title">Students</h6>
+      </div>
+      <div class="card">
+        <div class="dateMenu">
+          <div class="date">2024/6</div>
+          <div class="dropdown">
+            <i class="ph-duotone ph-dots-three-outline"></i>
+
+            <ul class="dropmenu">
+              <li>Edit</li>
+              <li>Delete</li>
+            </ul>
+          </div>
+        </div>
+        <h4 class="count">6</h4>
+        <h6 class="title">Parents</h6>
+      </div>
+    </div>
+    <div class="table_card my-md">
+      <table>
+        <tr>
+          <th>invoce</th>
+          <th>customer</th>
+          <th>ship</th>
+          <th>price</th>
+          <th>pruchased price</th>
+          <th>status</th>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="progress">Progress</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="open">Open</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="on-hold">on hold</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="progress">Progress</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="on-hold">on hold</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="open">Open</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="open">Open</button></td>
+        </tr>
+        <tr>
+          <td>1001</td>
+          <td>Mark Otto</td>
+          <td>Japan</td>
+          <td>$3000</td>
+          <td>$1200</td>
+          <td><button class="progress">Progress</button></td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="chart_parent my-md">
+      <div class="chart_card">
+        <div id="databox"></div>
+      </div>
+      <div class="chart_card">
+        <div id="chartCandle"></div>
+      </div>
+    </div>
+
     <!-- Apex chart CDN Links -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
