--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
       </div>
     </div>
 
+    
+    <div class="my-md">
+      <div id="chartLine"></div>
+    </div>
+
+
+
     <!-- Apex chart CDN Links -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
